fix: sonar issues (#1197)